<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteTaskActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/information_title"
        android:textStyle="bold"
        android:textColor="@color/task_information"
        />

    <View
        android:id="@+id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="37dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/information_title"
        app:layout_constraintTop_toBottomOf="@id/information_title"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <!-- <<<< Information >>>> -->

    <!-- Dates -->
    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_divider"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/creation_date"
        android:textColor="@color/subtitle_disabled"
        />

    <TextView
        android:id="@+id/last_edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/creation_date"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/last_edit_date"
        android:textColor="@color/subtitle_disabled"
        />

    <View
        android:id="@+id/edit_date_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="37dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/last_edit_date"
        app:layout_constraintTop_toBottomOf="@id/last_edit_date"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <!-- Description -->
    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_date_divider"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/description_title"
        android:textColor="@color/subtitle_enabled"
        />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintStart_toStartOf="parent"

        android:inputType="text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/subtitle_disabled"
        />

    <View
        android:id="@+id/description_title_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="37dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/save_description"
        app:layout_constraintTop_toBottomOf="@id/save_description"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <!-- Status -->
    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_title_divider"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/status"
        android:textColor="@color/subtitle_enabled"
        />

    <TextView
        android:id="@+id/check_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_title_divider"
        app:layout_constraintStart_toEndOf="@id/status_title"

        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/not_complete"
        android:textStyle="bold"
        android:textColor="@color/task_not_complete"
        />

    <!-- Actions -->
    <Button
        android:id="@+id/save_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:layout_constraintEnd_toEndOf="parent"

        android:enabled="false"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:text="@string/save_button"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        />

    <Button
        android:id="@+id/complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:text="@string/complete_button"
        android:theme="@style/CompleteButton"
        />




</androidx.constraintlayout.widget.ConstraintLayout>